sleepOrder controller - bug fix

--- a/config/crd/bases/sleepod.sleepod.io_sleeporders.yaml
+++ b/config/crd/bases/sleepod.sleepod.io_sleeporders.yaml
@@ -90,6 +90,7 @@ spec:
                 enum:
                 - Sleeping
                 - Awake
+                - Error TargetNotFound
                 - Error
                 type: string
               lastTransitionTime:
