--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -22,6 +22,9 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the sleepod-controller itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- sleeppolicy_admin_role.yaml
+- sleeppolicy_editor_role.yaml
+- sleeppolicy_viewer_role.yaml
 - sleeporder_admin_role.yaml
 - sleeporder_editor_role.yaml
 - sleeporder_viewer_role.yaml
