--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - sleepod_v1alpha1_sleeporder.yaml
+- sleepod_v1alpha1_sleeppolicy.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
