--- a/config/samples/sleepod_v1alpha1_sleeppolicy.yaml
+++ b/config/samples/sleepod_v1alpha1_sleeppolicy.yaml
@@ -1,9 +1,62 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: test-deployment
+  name: test-deployment
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: test-deployment
+  strategy: {}
+  template:
+    metadata:
+      labels:
+        app: test-deployment
+    spec:
+      containers:
+      - image: nginx
+        name: nginx
+        resources: {}
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  labels:
+    app: test-statefulset
+  name: test-statefulset
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: test-statefulset
+  template:
+    metadata:
+      labels:
+        app: test-statefulset
+    spec:
+      containers:
+      - image: nginx
+        name: nginx
+        resources: {}
+---
 apiVersion: sleepod.sleepod.io/v1alpha1
 kind: SleepPolicy
 metadata:
   labels:
     app.kubernetes.io/name: sleepod-controller
     app.kubernetes.io/managed-by: kustomize
-  name: sleeppolicy-sample
+  name: sleeppolicy-sample-1
 spec:
-  # TODO(user): Add fields here
+  timezone: "UTC"
+  deployments:
+    default:
+      enable: true
+      sleepAt: "08:00"
+      wakeAt: "09:00"
+  statefulSets:
+    test-statefulset:
+      enable: false
+      sleepAt: "20:30"
+      wakeAt: "08:30"
