--- a/.github/workflows/test-chart.yml
+++ b/.github/workflows/test-chart.yml
@@ -78,13 +78,15 @@ jobs:
 
       - name: Install Helm chart for project
         run: |
-          helm install my-release ./dist/chart --create-namespace --namespace sleepod-controller-system
+          helm install my-release ./dist/chart --create-namespace --namespace sleepod-controller-helm \
+            --set controllerManager.container.image.repository=sleepod-controller \
+            --set controllerManager.container.image.tag=v0.1.0
 
       - name: Check Helm release status
         run: |
-          helm status my-release --namespace sleepod-controller-system
+          helm status my-release --namespace sleepod-controller-helm
 
 # TODO: Uncomment if prometheus.enabled is set to true to confirm that the ServiceMonitor gets created
 #      - name: Check Presence of ServiceMonitor
 #        run: |
-#          kubectl wait --namespace sleepod-controller-system --for=jsonpath='{.kind}'=ServiceMonitor servicemonitor/sleepod-controller-controller-manager-metrics-monitor
+#          kubectl wait --namespace sleepod-controller-helm --for=jsonpath='{.kind}'=ServiceMonitor servicemonitor/sleepod-controller-controller-manager-metrics-monitor
