--- a/config/crd/bases/sleepod.sleepod.io_sleeporders.yaml
+++ b/config/crd/bases/sleepod.sleepod.io_sleeporders.yaml
@@ -78,6 +78,8 @@ spec:
               wakeAt:
                 pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
                 type: string
+              workingDays:
+                type: string
             required:
             - sleepAt
             - targetRef
