--- a/config/crd/bases/sleepod.sleepod.io_sleeppolicies.yaml
+++ b/config/crd/bases/sleepod.sleepod.io_sleeppolicies.yaml
@@ -54,6 +54,8 @@ spec:
                     wakeAt:
                       pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
                       type: string
+                    workingDays:
+                      type: string
                   required:
                   - enable
                   type: object
@@ -74,6 +76,8 @@ spec:
                       type: string
                     wakeAt:
                       pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$
+                      type: string
+                    workingDays:
                       type: string
                   required:
                   - enable
@@ -105,6 +109,8 @@ spec:
                     timezone:
                       type: string
                     wakeAt:
+                      type: string
+                    workingDays:
                       type: string
                   type: object
                 description: List of resources currently managed by this policy.
